<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.kie</groupId>
		<artifactId>kie-spring-boot</artifactId>
		<version>7.15.0.Final</version>
	</parent>

	<groupId>com.arvato.workflow</groupId>
	<artifactId>kie4developer</artifactId>

	<name>KIE4Developer - Work with KIE the easy way</name>
	<description>Template Project to easily create KIE Workflow Projects and deploy them to a KIE Server</description>

	<properties>
		<start-class>com.arvato.workflow.kie4developer.KIE4DeveloperApplication</start-class>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<version.swagger-ui>2.2.10</version.swagger-ui>
		<version.spring-boot>1.5.9.RELEASE</version.spring-boot>
		<version.swagger-jaxrs>1.5.24</version.swagger-jaxrs>
	</properties>

	<!-- KIE-Server required libs -->
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>swagger-ui</artifactId>
				<version>${version.swagger-ui}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-rt-rs-service-description-swagger</artifactId>
				<version>${version.cxf.jaxrs}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- KIE Server starter -->
		<dependency>
			<groupId>org.kie</groupId>
			<artifactId>kie-server-spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!-- extra dependencies for swagger -->
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>swagger-ui</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-rs-service-description-swagger</artifactId>
		</dependency>
		<dependency>
			<groupId>io.swagger</groupId>
			<artifactId>swagger-jaxrs</artifactId>
			<version>${version.swagger-jaxrs}</version>
			<exclusions>
				<exclusion>
					<groupId>javax.ws.rs</groupId>
					<artifactId>jsr311-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- KIE-Server client lib -->
		<dependency>
			<groupId>org.kie.server</groupId>
			<artifactId>kie-server-client</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.jboss.spec.javax.ws.rs</groupId>
					<artifactId>jboss-jaxrs-api_2.0_spec</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- BPM fluent api lib -->
		<dependency>
			<groupId>org.jbpm</groupId>
			<artifactId>jbpm-flow</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jbpm</groupId>
			<artifactId>jbpm-bpmn2</artifactId>
		</dependency>

		<!-- test dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<!-- exclude libs that come with KIE-Server -->
				<exclusion>
					<groupId>net.minidev</groupId>
					<artifactId>accessors-smart</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.vaadin.external.google</groupId>
					<artifactId>android-json</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-direct-dependencies</id>
						<phase>validate</phase>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<fail>false</fail>
						</configuration>
					</execution>
					<execution>
						<id>no-managed-deps</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<phase>initialize</phase>
						<configuration>
							<rules>
								<requireManagedDeps implementation="org.commonjava.maven.enforcer.rule.EnforceManagedDepsRule">
									<checkProfiles>true</checkProfiles>
									<failOnViolation>false</failOnViolation>
								</requireManagedDeps>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>h2</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencies>
				<dependency>
					<groupId>com.h2database</groupId>
					<artifactId>h2</artifactId>
				</dependency>
			</dependencies>
		</profile>
	</profiles>
</project>
